err/datatank-py.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/datatank_py'...
Compiling './lib/python3.5/site-packages/datatank_py/DTBitmap2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTBitmap2D.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/datatank_py/DTPath2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTPath2D.py", line 281
    print "%d loops" % (path.number_of_loops())
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/datatank_py/DTPathValues2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTPathValues2D.py", line 101
    print pv
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTPoint2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTPoint2D.py", line 62
    print df.dt_object_named("Point 1")
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/datatank_py/DTPointCollection2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTPointCollection2D.py", line 124
    print pc
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTPointValueCollection2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTPointValueCollection2D.py", line 111
    print pv
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTRegion2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTRegion2D.py", line 62
    print region
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTRegion3D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTRegion3D.py", line 59
    print region
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTStructuredGrid3D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTStructuredGrid3D.py", line 194
    print grid
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTStructuredMesh3D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTStructuredMesh3D.py", line 120
    print mesh
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTStructuredVectorField2D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTStructuredVectorField2D.py", line 90
    print mesh
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatank_py/DTStructuredVectorField3D.py'...
***   File "./lib/python3.5/site-packages/datatank_py/DTStructuredVectorField3D.py", line 97
    print mesh
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/datatank_py-0.71.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
